# gimpilot

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  README.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/data/: pdb_export.jsonl
backend/data/lancedb/: ingest_manifest.json
backend/data/lancedb/__manifest/_transactions/: 0-5012a12f-3e7f-476d-a7a1-e40f9e89a5d7.txn
backend/data/lancedb/procedures.lance/_transactions/: 12-3330d16c-1fac-47a6-9e5c-e0426a17894d.txn
backend/src/backend/: config.py  main.py  rag.py
backend/src/backend/conversation/: __init__.py  graph.py  schemas.py  tools.py
backend/src/backend/rag/: __init__.py  __main__.py  ingest.py  retrieval.py
backend/src/backend/shared/: config.py  schemas.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample_pdb_export.jsonl
backend/tests/integration/: test_converse.py  test_main.py
backend/tests/unit/conversation/: test_graph.py  test_init.py  test_tools.py
backend/tests/unit/rag/: test_cli.py  test_ingest.py  test_retrieval.py
backend/tests/unit/shared/: test_config.py  test_schemas.py
eval/: README.md  cases.py  run_conversation_eval.py  run_retrieval_comparison.py
gimp-pilot-plugin/: README.md  backend_client.py  chat_window.py  context.py  conversation.py  gimp-pilot-plugin.py  pdb_bridge.py  pyproject.toml
gimp-pilot-plugin/tests/: conftest.py  test_backend_client.py  test_context.py  test_conversation.py  test_pdb_bridge.py
pdb-tools/: README.md  export_pdb.py  gimp_mcp_bridge.py  mcp_client_example.py
(+2 files in other folders)
