[project]
name = "backend"
version = "0.1.0"
description = "LangGraph + RAG reasoning server for the gimp-pilot-plugin"
readme = "README.md"
authors = [
    { name = "Parshv Joshi", email = "frectrium@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "lancedb>=0.34.0",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.7",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.50.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["backend"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
]

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
